--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@brunogasparetto/fluig-declaration-type",
-  "version": "1.0.1",
+  "name": "fluig-declaration-type",
+  "version": "1.2.0",
   "description": "Fluig decaration types",
   "types": "fluig.d.ts",
   "scripts": {
@@ -19,9 +19,8 @@
     "url": "https://github.com/brunogasparetto/fluig-declaration-type/issues"
   },
   "homepage": "https://github.com/brunogasparetto/fluig-declaration-type#readme",
-  "dependencies": {
-    "@types/jquery": "^3.5.5",
-    "@types/moment": "^2.13.0"
-  },
-  "devDependencies": {}
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1"
+  }
 }
