--- a/.gitattributes
+++ b/.gitattributes
@@ -5,4 +5,5 @@ LICENSE export-ignore
 package-lock.json export-ignore
 package.json export-ignore
 README.md export-ignore
+gulpfile.js export-ignore
 src export-ignore
