--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fluig decaration types",
   "types": "fluig.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp"
   },
   "repository": {
     "type": "git",
