--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluig-declaration-type",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Fluig decaration types",
   "types": "fluig.d.ts",
   "scripts": {
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/brunogasparetto/fluig-declaration-type#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
     "gulp-concat": "^2.6.1"
   }
 }
